--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -1,20 +1,24 @@
 @charset "UTF-8";
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
-    main{
-        display: inline-block;
-        border-radius: 20px;
-        background-color: white;
-        border: 1px solid black;
-        width: 90vw;
-        height: 50vh;
-    }
-        #boximagem{
-           
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 50vw;
-            height: 35vh;
+/*
+Paleta de cores
+Verde: #49a09d
+Lilas: #5f2c82
+*/
+    @media screen and (min-width: 768px) and (max-width: 992px) {
+        body{
+            background-image: linear-gradient(to top, #49a09d,#5f2c82);
+        }
+        #login{
+            width: 80vw;
+            height: 200px;
+        }
+        #imagem{
+            width: 30%;
+            float: left;
+            height: 100%;
+        }
+        #login{
+            width: 70%;
+            float: right;
         }
     }
-    
