--- a/estilos/style.css
+++ b/estilos/style.css
@@ -121,7 +121,7 @@ main{
     width: 90%;
     height: 40px;
     margin-bottom: 5px;
-    color:#49a09d;
+    color:#1f4948;
     border: none;
     border-radius: 10px;
     border: 2px solid #49a09d;
